fix login modal z-index

--- a/theme/edumy/style/menu.css
+++ b/theme/edumy/style/menu.css
@@ -650,7 +650,7 @@ li.mm-listitem {
   -o-transition: transform .4s ease;
   transition: transform .4s ease;
   transition: transform .4s ease, -webkit-transform .4s ease;
-  z-index: 1
+  z-index: 1050;
 }
 .mm-wrapper_opened {
   overflow-x: hidden;
